--- a/notebook/product_engagement_prediction.ipynb
+++ b/notebook/product_engagement_prediction.ipynb
@@ -9,9 +9,7 @@
     "\n",
     "## MLOps Assignment Implementation\n",
     "\n",
-    "**Student:** [Student Name]  \n",
-    "**Course:** Machine Learning Operations  \n",
-    "**Assignment:** Summative Assessment\n",
+    "**Student:** [Lievin Murayire]  \n",
     "\n",
     "---\n",
     "\n",
